samples/_failures_safe/1761245878_c76aba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_916ef464.c: In function ‘main’:
./samples/SAFE/__tmp_916ef464.c:178:9: error: expected declaration or statement at end of input
  178 |         printf("Invalid number of items\n");
      |         ^~~~~~
./samples/SAFE/__tmp_916ef464.c:178:9: error: expected declaration or statement at end of input
